fix(Input): overflow hidden add on select not div

--- a/themes/native/input.less
+++ b/themes/native/input.less
@@ -136,6 +136,8 @@ textarea{
       z-index: 2;
       margin:0;
       flex: 1;
+    }
+    >.h-select {
       overflow: hidden;
     }
     >div{
